<resources>
    <!---Login-->
    <string name="app_name" translatable="false">Coach Manager</string>
    <string name="lblCorreoLogin">Correo</string>
    <string name="lblPasswordLogin">Contraseña</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="btnRecordarPassword">¿Olvidaste la contraseña?</string>
    <string name="hintCorreo">ejemplo@ejemplo.com</string>
    <string name="btnRegistrase">¿No tienes cuenta?</string>
    <string name="lblCopyrightLogin">Copyright 2018 SabaDevs | Todos los derechos reservados.</string>

    <!---Registro-->
    <string name="lblNombreRegistro">Nombre</string>
    <string name="hintNombre">Jorge</string>
    <string name="lblPrimerApellidoRegistro">Primer apellido</string>
    <string name="hintPrimerApellidoRegistro">González</string>
    <string name="lblSegundoApellidoRegistro">Segundo apellido</string>
    <string name="hintSegundoApellidoRegistro">Sánchez</string>
    <string name="lblDNIRegistro">DNI</string>
    <string name="hintDNIRegistro">12345678Z</string>
    <string name="lblMovilRegisto">Móvil</string>
    <string name="hintMovilRegistro">668877399</string>
    <string name="lblFechaRegistro">Fecha de nacimiento</string>
    <string name="hintFechaRegistro">dd/mm/aaaa</string>
    <string name="btnHacerRegistro">Registrarse</string>
    <string name="title_activity_menu" translatable="false">Coach Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="GeneroMasculino">Masculino</string>
    <string name="GeneroFemenino">Femenino</string>
    <string name="ManoDomIzq">Izquierda</string>
    <string name="ManoDomDer">Derecha</string>
    <string name="PieDomIzq">Izquierdo</string>
    <string name="PieDomDer">Derecho</string>
    <string name="errorCorreo">Introduce un correo correcto</string>
    <string name="errorContrasenya">Introduce una contraseña correcta</string>
    <string name="InicioSesionCorrecto">Inicio de sesión correcto</string>

    <!-- MenuActivity -->
    <string name="errorConexionBD">No se ha podido conectar con la base de datos</string>

    <!-- Olvidar contrasenya -->
    <string name="lblCorreoRecu">Introduce tu email y te enviaremos un código para que restablezcas tu contraseña.</string>
    <string name="btnEnviarCodigo">Enviar código</string>
    <string name="errorEmailVacio">Introduce un email</string>

    <!-- Desplegable usuario -->
    <string name="ajustesUsuario">Mi perfil</string>
    <string name="cerrarSesion">Cerrar sesión</string>

    <!-- Tres opciones del fondo en el menú principal -->
    <string name="reportarProblema">Reportar un problema</string>
    <string name="Ayuda">Ayuda</string>
    <string name="sobreNosotros">Sobre nosotros</string>

    <!-- Sobre nosotros -->
    <string name="textoSobreNosotros">Coach Manager es una aplicación desarrollada por SabaDevs.\n\nEn SabaDevs, buscamos que nuestro software cumpla necesidades de la forma más sencilla posible.</string>
    <string name="btnVolver">Volver</string>

    <!-- AlumnosActivity -->
    <string name="lblGeneroAlumno">Género</string>
    <string name="lblPesoAlumno">Peso</string>
    <string name="lblAlturaAlumno">Altura</string>
    <string name="lblManoDomAlumno">Mano dominante</string>
    <string name="lblPieDomAlumno">Pie dominante</string>
    <string name="lblObservacionesAlumno">Observaciones</string>
    <string name="btnEditarAlumno">Editar alumno</string>
    <string name="btnGuardarEditAlum">Guardar cambios</string>
    <string name="btnAñadirAlumno">Añadir alumno</string>
    <string name="EliminarAlumno">Eliminar alumno</string>
    <string name="EliminarAlumnoPregunta">"¿Quieres eliminar al alumno "</string>
    <string name="Si">Sí</string>
    <string name="Cancelar">Cancelar</string>
    <string name="AlumnoEliminado">Alumno eliminado</string>


    <!-- AnyadirAlumnoActivity -->
    <string name="errorRellCampsObl">Rellena todos los campos obligatorios</string>
    <string name="errorMovil">Introduce un móvil correcto</string>
    <string name="errorPeso">Introduce un peso correcto</string>
    <string name="errorAltura">Introduce una altura correcta</string>
    <string name="errorNombre">Introduce un nombre correcto</string>
    <string name="errorApellido">Introduce un apellido correcto</string>
    <string name="errorCorreoExistente">Has introducido un correo ya existente</string>
    <string name="errorDNIExistente">Has introducido un DNI ya existente</string>
    <string name="RegistradoExito">Registrado con éxito</string>
    <string name="LimiteCaracteres">Límite de caracteres alcanzado en observaciones</string>

    <!-- GruposActivity -->
    <string name="btnEditarrGrupo">Editar grupo</string>
    <string name="lblCategoriaGrupo">Categoría</string>
    <string name="lblAlumnosGrupo">Alumnos</string>
    <string name="btnAñadirGrupo">Añadir grupo</string>
    <string name="lblGenero">Género</string>
    <string name="hintPrimerApellido">García</string>
    <string name="EliminarGrupo">Eliminar grupo</string>
    <string name="EliminarGrupoPregunta">"¿Quieres eliminar el grupo "</string>
    <string name="GrupoEliminado">Grupo eliminado</string>

    <!-- AnyadirEjercicioActivity -->
    <string name="GrupoExistente">Ya existe un grupo con ese nombre</string>
    <string name="EjercicioExistente">Ya existe un ejercicio con ese nombre</string>

    <!-- AnyadirEjercicioActivity -->
    <string name="lblDescripcionEjercicio">Descripción</string>
    <string name="btnAñadirEjercicio">Añadir ejercicio</string>

    <!-- VerEjercicioActivity -->
    <string name="btnEditarEjercicio">Editar ejercicio</string>

    <!-- AnyadirEntrenamientoActivity -->
    <string name="btnAñadirEntre">Añadir entrenamiento</string>
    <string name="lblDeporteEntre">Deporte</string>
    <string name="lblEjercicioEntreAñadir">Ejercicios</string>
    <string name="btnEditarEntre">Editar entrenamiento</string>

    <!-- EditarAlumnoActivity -->
    <string name="GuardarCambios">Cambios guardados correctamente</string>
    <string name="btnAnyadirEntre">Añadir entrenamiento</string>

    <!-- AyudaActivity -->
    <string name="Alumnos">Alumnos</string>
    <string name="Grupos">Grupos</string>
    <string name="Ejercicios">Ejercicios</string>
    <string name="Entrenamientos">Entrenamientos</string>
    <string name="lblAyuda">¿De qué módulo le gustaría recibir ayuda?</string>
    <string name="Perfil">Perfil</string>

    <!-- EjerciciosActivity -->
    <string name="Deportes">Deportes</string>

    <!-- VerEjerciciosDeporteActivity -->
    <string name="EliminarEjercicio">Eliminar ejercicio</string>
    <string name="EjercicioEliminado">Ejercicio eliminado</string>
    <string name="EliminarEjercicioPregunta">"¿Quieres eliminar el ejercicio "</string>
    <string name="btnEditarPerfil">Editar perfil</string>
    <string name="Sesiones">Sesiones</string>
    <string name="SesionEliminada">Sesión eliminada</string>
    <string name="EliminarSesionPregunta">¿Quieres eliminar la sesion del grupo</string>
    <string name="EliminarSesion">Eliminar sesión</string>

    <!-- EntrenamientosActivity -->
    <string name="EliminarEntrenamiento">Eliminar entrenamiento</string>
    <string name="EntrenamientoEliminado">Entrenamiento eliminado</string>
    <string name="EliminarEntrenamientoPregunta">"¿Quieres eliminar el entrenamiento "</string>

    <!-- AnyadirSesionActivity -->
    <string name="Fecha_Sesion">Fecha</string>
    <string name="Hora_inicio_sesion">Hora de inicio</string>
    <string name="Hora_fin_sesion">Hora de fin</string>
    <string name="SesionRealizada">¿Sesión realizada?</string>
    <string name="Valoracion_sesion">Valoración</string>
    <string name="Motivo_cancelacion_sesion">Motivo de cancelación</string>
    <string name="ErrorEntreNoSelecionado">Selecciona uno o más entrenamientos</string>
    <string name="btnAñadirSesion">Añadir sesión</string>
    <string name="GrupoSesion">Grupo</string>
    <string name="btnEditarSesion">Editar sesión</string>

</resources>
