<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.victo.coachmanager.VerAlumnoActivity">

    <ImageView
        android:id="@+id/fotoAlumno"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        app:srcCompat="@drawable/boton_redondeado" />

    <TextView
        android:id="@+id/lblNombreAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fotoAlumno"
        android:text="@string/lblNombreRegistro"
        android:layout_marginTop="55dp"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lblNombreAlumnoValor"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblNombreAlumno"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblPrimerApellidoAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblNombreAlumnoValor"
        android:layout_marginTop="9dp"
        android:text="@string/lblPrimerApellidoRegistro"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lblPrimerApellidoAlumnoValor"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblPrimerApellidoAlumno"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblSegundoApellidoAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblPrimerApellidoAlumnoValor"
        android:layout_marginTop="8dp"
        android:text="@string/lblSegundoApellidoRegistro"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lblSegundoApellidoAlumnoValor"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblSegundoApellidoAlumno"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblGeneroAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblSegundoApellidoAlumnoValor"
        android:layout_marginTop="8dp"
        android:text="@string/lblGeneroAlumno"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lblGeneroAlumnoValor"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblGeneroAlumno"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblFechaNacimientoAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblGeneroAlumnoValor"
        android:layout_marginTop="8dp"
        android:text="@string/lblFechaRegistro"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lblFechaNacimientoAlumnoValor"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblFechaNacimientoAlumno"
        android:background="@drawable/editextborder"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1" />

    <TextView
        android:id="@+id/lblDNIAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblFechaNacimientoAlumnoValor"
        android:layout_marginTop="8dp"
        android:text="@string/lblDNIRegistro"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lblDNIAlumnoValor"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblDNIAlumno"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblMovilAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblDNIAlumnoValor"
        android:layout_marginTop="8dp"
        android:text="@string/lblMovilRegisto"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lblMovilAlumnoValor"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblMovilAlumno"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblPesoAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignBaseline="@+id/lblNombreAlumno"
        android:layout_alignBottom="@+id/lblNombreAlumno"
        android:layout_alignParentEnd="true"
        android:text="@string/lblPesoAlumno"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edPesoAlumno"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lblPesoAlumno"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblAlturaAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignBaseline="@+id/lblPrimerApellidoAlumno"
        android:layout_alignBottom="@+id/lblPrimerApellidoAlumno"
        android:layout_alignParentEnd="true"
        android:text="@string/lblAlturaAlumno"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edAlturaAlumno"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/lblPrimerApellidoAlumnoValor"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblManoDomAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_above="@+id/lblSegundoApellidoAlumnoValor"
        android:layout_alignParentEnd="true"
        android:text="@string/lblManoDomAlumno"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edManoDomAlumno"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lblManoDomAlumno"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblPieDomAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_above="@+id/lblGeneroAlumnoValor"
        android:layout_alignParentEnd="true"
        android:text="@string/lblPieDomAlumno"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edManoPieAlumno"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lblPieDomAlumno"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblObservacionesAlumno"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignBaseline="@+id/lblFechaNacimientoAlumno"
        android:layout_alignBottom="@+id/lblFechaNacimientoAlumno"
        android:layout_alignParentEnd="true"
        android:text="@string/lblObservacionesAlumno"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edObservacionesAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblDNIAlumnoValor"
        android:layout_alignStart="@+id/lblObservacionesAlumno"
        android:layout_below="@+id/lblObservacionesAlumno"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnGuardarEditAlum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblMovilAlumnoValor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/btnGuardarEditAlum"
        android:textColor="@android:color/white"
        android:padding="4dip"
        android:textStyle="bold" />

</RelativeLayout>
