<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textoSobreNosotros"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="192dp"
        android:text="@string/textoSobreNosotros"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="269dp"
        android:text="@string/lblCopyrightLogin"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        app:srcCompat="@drawable/logosabadevs" />

    <Button
        android:id="@+id/btnVolverSobreNosotros"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="148dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/btnVolver"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>