<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.victo.coachmanager.RegistroActivity">

    <ImageView
        android:id="@+id/logoRegistro"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/lblCorreoRegistro"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_below="@+id/logoRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/lblCorreoLogin"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblPasswordRegistro"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/edCorreoRegistro"
        android:layout_below="@+id/edCorreoRegistro"
        android:layout_marginTop="11dp"
        android:text="@string/lblPasswordLogin"
        android:textColor="@android:color/background_dark"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edCorreoRegistro"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/lblCorreoRegistro"
        android:layout_below="@+id/lblCorreoRegistro"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:hint="@string/hintCorreo"

        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/edPasswordRegistro"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/lblPasswordRegistro"
        android:layout_below="@+id/lblPasswordRegistro"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:hint="*********"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark" />

</RelativeLayout>
