<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.victo.coachmanager.VerAlumnoActivity"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/btnVolverAñadirEntre"
        android:layout_width="34dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="55dp"
        app:srcCompat="@drawable/flechaatras" />

    <Button
        android:id="@+id/btnAñadirEntre"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnVolverAñadirEntre"
        android:layout_marginEnd="30dp"
        android:background="@drawable/boton_redondeado"
        android:padding="4dip"
        android:text="@string/btnAñadirEntre"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblNombreEntreAñadir"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btnVolverAñadirEntre"
        android:layout_marginTop="129dp"
        android:text="@string/lblNombreRegistro"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edNombreEntreAñadir"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/lblNombreEntreAñadir"
        android:layout_below="@+id/lblNombreEntreAñadir"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblDeporteEntreAñadir"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/lblNombreEntreAñadir"
        android:layout_below="@+id/edNombreEntreAñadir"
        android:layout_marginTop="8dp"
        android:text="@string/lblDeporteEntre"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/SpDeporteEntreAñadir"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="200dp"
        android:layout_height="37dp"
        android:layout_alignStart="@+id/lblNombreEntreAñadir"
        android:layout_below="@+id/lblDeporteEntreAñadir"
        android:backgroundTint="#01C321"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="0dp"
        android:paddingTop="5dp"
        android:singleLine="false"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lblEjercicioEntreAñadir"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/lblNombreEntreAñadir"
        android:layout_below="@+id/SpDeporteEntreAñadir"
        android:layout_marginTop="1dp"
        android:text="@string/lblEjercicioEntreAñadir"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lv_ejercicios_deporteAñadir"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblEjercicioEntreAñadir"
        android:layout_marginStart="15dp"
        android:choiceMode="multipleChoice" />

</RelativeLayout>
